--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -30,11 +30,11 @@
   "adminRemoveAsAdmin": "إزالة كمشرف",
   "adminRemoveCommunityNone": "لا يوجد مسؤولين في هذا المجتمع.",
   "adminRemoveFailed": "فشل في إزالة {name} كمدير.",
-  "adminRemoveFailedMultiple": "فشل في إزالة <b>{name}</b> و<b>{count} آخرين</b> كمسؤول.",
-  "adminRemoveFailedOther": "فشل في إزالة <b>{name}</b> و<b>{other_name}</b> كمسؤول.",
+  "adminRemoveFailedMultiple": "فشل في إزالة <b>{name}</b> و<b>{count} آخرين</b> كمشرف.",
+  "adminRemoveFailedOther": "فشل في إزالة <b>{name}</b> و<b>{other_name}</b> كمشرف.",
   "adminRemovedUser": "<b>{name}</b> تم إزالته كمشرف.",
-  "adminRemovedUserMultiple": "تمت إزالة <b>{name}</b> و<b>{count} آخرين</b> من منصبهم كمسؤولين.",
-  "adminRemovedUserOther": "تمت إزالة <b>{name}</b> و<b>{other_name}</b> من منصبي المسؤول.",
+  "adminRemovedUserMultiple": "تمت إزالة <b>{name}</b> و<b>{count} آخرين</b> من منصبهم كمشرفين.",
+  "adminRemovedUserOther": "تمت إزالة <b>{name}</b> و<b>{other_name}</b> من منصبي المشرف.",
   "adminSettings": "اعدادات المسؤول",
   "adminTwoPromotedToAdmin": "<b>{name}</b> و <b>{other_name}</b> تم ترقيتهم إلى مشرف.",
   "andMore": "+{count}",
@@ -57,7 +57,7 @@
   "appearanceZoomOut": "تصغير",
   "attachment": "مرفق",
   "attachmentsAdd": "إضافة مرفق",
-  "attachmentsAlbumUnnamed": "ألبوم بدون إسم",
+  "attachmentsAlbumUnnamed": "البوم بدون اسم",
   "attachmentsAutoDownload": "تنزيل المرفقات تلقائيًا",
   "attachmentsAutoDownloadDescription": "تنزيل الوسائط والملفات من هذه الدردشة تلقائيًا.",
   "attachmentsAutoDownloadModalDescription": "هل تود تنزيل كافة الملفات تلقائيًا من <b>{conversation_name}</b>؟",
@@ -146,6 +146,7 @@
   "callsNotificationsRequired": "المكالمات الصوتية والمرئية تتطلب تمكين الاشعارات في اعدادات نظامك.",
   "callsPermissionsRequired": "صلاحيات الاتصال مطلوبة",
   "callsPermissionsRequiredDescription": "يمكنك تفعيل صَلاحِيَة \"المكالمات الصوتية والمرئية\" في إعدادات الخصوصية.",
+  "callsPermissionsRequiredDescription1": "يمكنك تمكين إذن \"المكالمات الصوتية والفيديو\" في إعدادات الأذونات.",
   "callsReconnecting": "جار إعادة الاتصال…",
   "callsRinging": "يرن حاليا...",
   "callsSessionCall": "{app_name} Call",
@@ -250,7 +251,7 @@
   "create": "إنشاء",
   "cut": "قص",
   "databaseErrorGeneric": "حدث خطأ في قاعدة البيانات.<br/> <br/> صدر سجلات التطبيق الخاصة بك للمشاركة في استكشاف الأخطاء وإصلاحها. إذا لم ينجح ذلك، أعد تثبيت {app_name} واستعد حسابك. <br/> <br/>تحذير: سيؤدي ذلك إلى فقدان جميع الرسائل والمرفقات وبيانات الحساب التي يزيد عمرها عن أسبوعين.",
-  "databaseErrorTimeout": "لقد لاحظنا أن {app_name} يستغرق وقتًا طويلاً لبدء.<br/><br/>يمكنك مواصلة الانتظار، تصدير سجلات الجهاز للمشاركة في استكشاف الأخطاء وإصلاحها، أو محاولة إعادة تشغيل Session.",
+  "databaseErrorTimeout": "لقد لاحظنا أن {app_name} يستغرق وقتًا طويلاً لبدء.<br/><br/>يمكنك مواصلة الانتظار، تصدير سجلات الجهاز للمشاركة في استكشاف الأخطاء وإصلاحها، أو محاولة إعادة تشغيل {app_name}.",
   "databaseErrorUpdate": "قاعدة بيانات تطبيقك غير متوافقة مع هذا الإصدار من {app_name}. أعد تثبيت التطبيق واستعد حسابك لإنشاء قاعدة بيانات جديدة ومتابعة استخدام {app_name}.<br/><br/>تحذير: سيؤدي هذا إلى فقدان جميع الرسائل والمرفقات التي يزيد عمرها عن أسبوعين.",
   "databaseOptimizing": "تحسين قاعدة البيانات",
   "debugLog": "سجل تصحيح الأخطاء",
@@ -275,10 +276,12 @@
   "deleteMessageDeleted": "{count, plural, zero [تم حذف الرسائل] one [تم حذف الرسالة] two [تم حذف الرسائل] few [تم حذف الرسائل] many [تم حذف الرسائل] other [تم حذف الرسائل]}",
   "deleteMessageDeletedGlobally": "تم حذف هذه الرسالة",
   "deleteMessageDeletedLocally": "تم حذف هذه الرسالة على هذا الجهاز",
+  "deleteMessageDescriptionDevice": "{count, plural, zero [هل أنت متأكد من حذف الرسائل من هذا الجهاز فقط؟] one [هل أنت متأكد من حذف الرسالة من هذا الجهاز فقط؟] two [هل أنت متأكد من حذف الرسائل من هذا الجهاز فقط؟] few [هل أنت متأكد من حذف الرسائل من هذا الجهاز فقط؟] many [هل أنت متأكد من حذف الرسائل من هذا الجهاز فقط؟] other [هل أنت متأكد من حذف الرسائل من هذا الجهاز فقط؟]}",
   "deleteMessageDescriptionEveryone": "هل أنت متأكد من أنك تريد حذف هذه الرسالة للجميع؟",
   "deleteMessageDeviceOnly": "حذف على هذا الجهاز فقط",
   "deleteMessageDevicesAll": "حذف على جميع أجهزتي",
   "deleteMessageEveryone": "حذف للجميع",
+  "deleteMessageNoteToSelfWarning": "{count, plural, zero [لا يمكن حذف بعض الرسائل التي حددتها من جميع أجهزتك] one [لا يمكن حذف هذه الرسالة من جميع أجهزتك] two [لا يمكن حذف بعض الرسائل التي حددتها من جميع أجهزتك] few [لا يمكن حذف بعض الرسائل التي حددتها من جميع أجهزتك] many [لا يمكن حذف بعض الرسائل التي حددتها من جميع أجهزتك] other [لا يمكن حذف بعض الرسائل التي حددتها من جميع أجهزتك]}",
   "deleteMessagesDescriptionEveryone": "هل أنت متيقِّن من أنك تريد مسح هذه الرسائل لدى الجميع؟",
   "deleting": "حذف",
   "developerToolsToggle": "تحويل أدوات المطور",
@@ -309,7 +312,7 @@
   "disappearingMessagesSetYou": "<b>أنت</b> قمت بتعيين الرسائل لتختفي بعد {time} من {disappearing_messages_type}.",
   "disappearingMessagesTimer": "المؤقت",
   "disappearingMessagesTurnedOff": "<b>{name}</b> قام بإيقاف الرسائل المختفية. لن تختفي الرسائل التي يرسلها بعد الآن.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> قام/ت بإيقاف تشغيل الرسائل المختفية <b>إيقاف</b>.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> قام بإيقاف تشغيل الرسائل المختفية <b>إيقاف</b>.",
   "disappearingMessagesTurnedOffYou": "<b>أنت</b> أوقفت <b>الرسائل المختفية</b>. لم تعد الرسائل التي ترسلها تختفي.",
   "disappearingMessagesTurnedOffYouGroup": "<b>قمت</b> بإيقاف <b>تشغيل</b> الرسائل المختفية.",
   "disappearingMessagesTypeRead": "القراءة",
@@ -441,7 +444,7 @@
   "helpSupport": "الدعم",
   "helpWedLoveYourFeedback": "نتطلع لقراءة أراءك",
   "hide": "إخفاء",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarDescription": "تبديل رؤية شريط قائمة النظام",
   "hideOthers": "إخفاء الآخرين",
   "image": "صورة",
   "incognitoKeyboard": "لوحة المفاتيح في وضع التستّر",
@@ -558,9 +561,9 @@
   "notificationsFastModeDescription": "ستتم إعلامك بالرسائل الجديدة بشكل موثوق وفوري باستخدام خوادم إشعارات جوجل.",
   "notificationsFastModeDescriptionIos": "سوف يتم إعلامك برسائل جديدة بشكل موثوق وفوري باستخدام خوادم إشعارات Apple.",
   "notificationsGoToDevice": "اذهب إلى إعدادات تنبيهات الجهاز",
-  "notificationsHeaderAllMessages": "التنبيهات - الكل",
-  "notificationsHeaderMentionsOnly": "التنبيهات - الإشعارات فقط",
-  "notificationsHeaderMute": "التنبيهات - مكتومة",
+  "notificationsHeaderAllMessages": "الإشعارات - الكل",
+  "notificationsHeaderMentionsOnly": "الإشعارات- الإشارات فقط",
+  "notificationsHeaderMute": "الإشعارات - مكتومة",
   "notificationsIosGroup": "{name} إلى {conversation_name}",
   "notificationsIosRestart": "ربما تلقيت رسائل أثناء إعادة تشغيل {device} الخاص بك.",
   "notificationsLedColor": "لون ضوء التنبيه LED",
@@ -748,7 +751,7 @@
   "showLess": "عرض أقل",
   "stickers": "الملصقات",
   "supportGoTo": "اِذهب اِلى صفحة الدعم",
-  "systemInformationDesktop": "System Information: {information}",
+  "systemInformationDesktop": "معلومات النظام: {information}",
   "theContinue": "التالي",
   "theDefault": "افتراضي",
   "theError": "خطأ",
