--- a/_locales/bal/messages.json
+++ b/_locales/bal/messages.json
@@ -251,7 +251,7 @@
   "create": "بناؤ",
   "cut": "کٹ",
   "databaseErrorGeneric": "Database error wajaht bravestā.<br/><br/>Apē application logs export ke troubleshooting bare. Agar u naęt, {app_name} reinstall ke a hare account still bāz ke.<br/><br/>Warning: Ē war result hōk wando messages attachment a all account data pur z du hafte purān gōh.",
-  "databaseErrorTimeout": "ما پٹِن گی اتہ {app_name} سرا کتن وقت گشتنت۔<br/><br/>باقی انتظار بکنت، سپاڈی بروک کردیا گزارش بکنت بیت ائی٬ گپچہ رفتارشت بار بکودنت بیت اتہ بھال دکنت۔",
+  "databaseErrorTimeout": "ما دیستگ کہ {app_name} ءِ بندات کنگ ءَ بازیں وھدے لگ اِیت۔<br/><br/>شما دیم ءَ اوشتات کن اِت، وتی ڈیوائس ءِ لاگاں پہ جیڑہ ءِ گیش ءُ گیوار ءَ شیئر کنگ ءِ ھاترا برآمد کن اِت یا {app_name} ءَ پدا بندات کنگ ءِ جُھد ءَ کن اِت۔",
   "databaseErrorUpdate": "{app_name} کس ای ورژنئے نکہ ایپ دیټابیس ناہم آهن. اِیپ نوک بزا من اَکاونٹ بازگری کن تا پن نوک دیټابیس پیدا بکن تا {app_name} دابی مرت استفاده بکن.<br/><br/>چیتپا: ماہیت زامبلاونکین دو ہفتہ ناہند، تمام پیامانءِ و اٹیچمنٹاں گم بیت.",
   "databaseOptimizing": "ڈیٹابیس شخصکورانی",
   "debugLog": "ڈیبگ لگ",
