--- a/_locales/be/messages.json
+++ b/_locales/be/messages.json
@@ -251,7 +251,7 @@
   "create": "Стварыць",
   "cut": "Выразаць",
   "databaseErrorGeneric": "Адбылася памылка базы дадзеных.<br/><br/>Экспартаваць часопісы прыкладання для падзелу для ліквідацыі непаладак. Калі гэта не ўдасца, перавстанавіць {app_name} і аднавіць свой уліковы запіс.<br/><br/>Папярэджанне: гэта прывядзе да страты ўсіх паведамленняў, укладанняў і дадзеных уліковага запісу, старэйшых за два тыдні.",
-  "databaseErrorTimeout": "Мы заўважылі, што {app_name} патрабуе шмат часу для запуску.<br/><br/>Вы можаце працягваць чакаць, экспартаваць журналы вашай прылады для спагнання праблем, альбо паспрабаваць перазапусціць Session.",
+  "databaseErrorTimeout": "Мы заўважылі, што {app_name} патрабуе шмат часу для запуску.<br/><br/>Вы можаце працягваць чакаць, экспартаваць журналы вашай прылады для спагнання праблем, альбо паспрабаваць перазапусціць {app_name}.",
   "databaseErrorUpdate": "Ваша база даных прыкладання несумяшчальная з гэтай версіяй {app_name}. Пераўсталюйце прыкладанне і аднавіце ўліковы запіс, каб стварыць новую базу даных і працягнуць выкарыстанне {app_name}.<br/><br/>Увага: гэта прывядзе да страты ўсіх паведамленняў і ўкладанняў старэйшых за два тыдні.",
   "databaseOptimizing": "Аптымізацыя базы даных",
   "debugLog": "Логі адладкі",
