--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -251,7 +251,7 @@
   "create": "Създай",
   "cut": "Изрязване",
   "databaseErrorGeneric": "Възникна грешка в базата данни.<br/><br/>Експортирайте логовете на приложението, за да ги споделите за отстраняване на проблемите. Ако това не успее, преинсталирайте {app_name} и възстановете акаунта си.<br/><br/>Предупреждение: Това ще доведе до загуба на всички съобщения, прикачени файлове и данни за акаунта, по-стари от две седмици.",
-  "databaseErrorTimeout": "Забелязахме, че стартирането на {app_name} отнема много време.<br/><br/>Можете да продължите да чакате, да експортирате дневници на устройството си, за да ги споделите за отстраняване на неизправности, или да опитате да рестартирате Session.",
+  "databaseErrorTimeout": "Забелязахме, че стартирането на {app_name} отнема много време.<br/><br/>Можете да продължите да чакате, да експортирате дневници на устройството си, за да ги споделите за отстраняване на неизправности, или да опитате да рестартирате {app_name}.",
   "databaseErrorUpdate": "Вашата база данни на приложението е несъвместима с тази версия на {app_name}. Инсталирайте повторно приложението и възстановете своя акаунт, за да генерирате нова база данни и да продължите да използвате {app_name}.<br/><br/>Внимание: Това ще доведе до загуба на всички съобщения и прикачени файлове по-стари от две седмици.",
   "databaseOptimizing": "Опресняване на базата данни",
   "debugLog": "Debug Log",
