--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -251,7 +251,7 @@
   "create": "তৈরি করুন",
   "cut": "কাটুন",
   "databaseErrorGeneric": "একটি ডাটাবেস ত্রুটি ঘটেছে।<br/><br/>আপনার অ্যাপ্লিকেশন লগগুলি রপ্তানি করুন, সমস্যার সমাধানের জন্য শেয়ার করুন। এটি ব্যর্থ হলে, {app_name} পুনঃইনস্টল করুন এবং আপনার অ্যাকাউন্ট পুনরুদ্ধার করুন।<br/><br/>সতর্কতা: এটি সমস্ত মেসেজ, সংযুক্তি এবং দুই সপ্তাহের পুরানো অ্যাকাউন্ট ডেটার ক্ষতি করবে।",
-  "databaseErrorTimeout": "We've noticed {app_name} is taking a long time to start.<br/><br/>You can continue to wait, export your device logs to share for troubleshooting, or try restarting Session.",
+  "databaseErrorTimeout": "We've noticed {app_name} is taking a long time to start.<br/><br/>You can continue to wait, export your device logs to share for troubleshooting, or try restarting {app_name}.",
   "databaseErrorUpdate": "আপনার অ্যাপ্লিকেশন ডাটাবেস {app_name} এর এই সংস্করণের সাথে অসঙ্গতিপূর্ণ। অ্যাপ পুনরায় ইনস্টল করুন এবং আপনার অ্যাকাউন্ট পুনরুদ্ধার করুন একটি নতুন ডাটাবেস তৈরি করতে এবং {app_name} ব্যবহার করতে থাকুন।<br/><br/>সতর্কতা: এর ফলে আপনার সমস্ত বার্তা এবং সংযুক্তিগুলি দুই সপ্তাহের বেশি পুরানো হারিয়ে যাবে।",
   "databaseOptimizing": "ডাটাবেস অপ্টিমাইজ করা হচ্ছে",
   "debugLog": "ডিবাগ লগ",
