--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -252,7 +252,7 @@
   "create": "Δημιουργία",
   "cut": "Αποκοπή",
   "databaseErrorGeneric": "Παρουσιάστηκε σφάλμα στη βάση δεδομένων.<br/><br/>Εξάγετε τα αρχεία καταγραφής της εφαρμογής σας για να τα μοιραστείτε για αντιμετώπιση προβλημάτων. Αν αυτό δεν επιτύχει, επανεγκαταστήστε την εφαρμογή {app_name} και αποκαταστήστε το λογαριασμό σας.<br/><br/>Προειδοποίηση: Αυτό θα καταλήξει σε απώλεια όλων των μηνυμάτων, συνημμένων και δεδομένων λογαριασμού που είναι παλαιότερα από δύο εβδομάδες.",
-  "databaseErrorTimeout": "Παρατηρήσαμε ότι το {app_name} χρειάζεται πολύ χρόνο για να ξεκινήσει.<br/><br/>Μπορείτε να συνεχίσετε να περιμένετε, να εξάγετε τα αρχεία καταγραφής της συσκευής σας για να τα μοιραστείτε για την αντιμετώπιση προβλημάτων ή να επανεκκινήσετε το Session.",
+  "databaseErrorTimeout": "Παρατηρήσαμε ότι το {app_name} χρειάζεται πολύ χρόνο για να ξεκινήσει.<br/><br/>Μπορείτε να συνεχίσετε να περιμένετε, να εξάγετε τα αρχεία καταγραφής της συσκευής σας για να τα μοιραστείτε για την αντιμετώπιση προβλημάτων ή να επανεκκινήσετε το {app_name}.",
   "databaseErrorUpdate": "Η βάση δεδομένων της εφαρμογής σας δεν είναι συμβατή με αυτήν την έκδοση του {app_name}. Επανεγκαταστήστε την εφαρμογή και αποκαταστήστε τον λογαριασμό σας για να δημιουργήσετε μια νέα βάση δεδομένων και να συνεχίσετε να χρησιμοποιείτε το {app_name}.<br/><br/>Προειδοποίηση: Αυτό θα έχει ως αποτέλεσμα την απώλεια όλων των μηνυμάτων και των συνημμένων που είναι παλαιότερα των δύο εβδομάδων.",
   "databaseOptimizing": "Βελτιστοποίηση Βάσης Δεδομένων",
   "debugLog": "Αρχείο καταγραφής Αποσφαλμάτωσης",
