--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -252,7 +252,7 @@
   "create": "Luo",
   "cut": "Leikkaa",
   "databaseErrorGeneric": "Tapahtui tietokantavirhe.<br/><br/>Vie sovelluslokisi vianselvitystä varten. Jollei tämä onnistu, asenna {app_name} uudelleen ja palauta tilisi.<br/><br/>Varoitus: Tämän seurauksena kaikki kahta viikkoa vanhemmat viestit, liitteet ja tilitiedot menetetään.",
-  "databaseErrorTimeout": "Huomasimme, että {app_name} käynnistyy hitaasti.<br/><br/>Voit jatkaa odottamista, viedä laitteesi lokit jaettavaksi vianmäärityksessä tai yrittää käynnistää Sessionin uudelleen.",
+  "databaseErrorTimeout": "Huomasimme, että {app_name} käynnistyy hitaasti.<br/><br/>Voit jatkaa odottamista, viedä laitteesi lokit jaettavaksi vianmäärityksessä tai yrittää käynnistää {app_name} uudelleen.",
   "databaseErrorUpdate": "Sovellustietokanta ei ole yhteensopiva tämän {app_name} version kanssa. Asenna sovellus uudelleen ja palauta tilisi, jotta voit luoda uuden tietokannan ja jatkaa {app_name} käyttöä.<br/><br/>Varoitus: Tämä johtaa yli kaksi viikkoa vanhojen viestien ja liitteiden menetykseen.",
   "databaseOptimizing": "Optimoidaan tietokanta",
   "debugLog": "Virheenkorjausloki",
