--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -252,7 +252,7 @@
   "create": "Créer",
   "cut": "Couper",
   "databaseErrorGeneric": "Une erreur de base de données est survenue.<br/><br/>Exportez vos journaux d'application pour les partager pour le dépannage. Si cela échoue, réinstallez {app_name} et restaurez votre compte.<br/><br/>Attention: Cela entraînera la perte de tout les messages, pièces jointes et données de compte de plus de deux semaines.",
-  "databaseErrorTimeout": "Nous avons remarqué que {app_name} met beaucoup de temps à démarrer.<br/><br/>Vous pouvez continuer à attendre, exporter les journaux de votre appareil pour les partager pour le dépannage ou essayer de redémarrer Session.",
+  "databaseErrorTimeout": "Nous avons remarqué que {app_name} met beaucoup de temps à démarrer.<br/><br/>Vous pouvez continuer à attendre, exporter les journaux de votre appareil pour les partager pour le dépannage ou essayer de redémarrer {app_name}.",
   "databaseErrorUpdate": "La base de données de votre application est incompatible avec cette version de {app_name}. Réinstallez l'application et restaurez votre compte pour générer une nouvelle base de données et continuer à utiliser {app_name}.<br/><br/>Avertissement : Cela entraînera la perte de tous les messages et pièces jointes datant de plus de deux semaines.",
   "databaseOptimizing": "Optimisation de la base de données",
   "debugLog": "Journal de débogage",
