--- a/_locales/ha/messages.json
+++ b/_locales/ha/messages.json
@@ -251,7 +251,7 @@
   "create": "Ƙirƙiri",
   "cut": "Yanke",
   "databaseErrorGeneric": "An sami kuskuren bayanai.<br/><br/>Fitar da bayanan aikace-aikacen ku don rabawa don warware matsala. Idan wannan bai yi nasara ba, sake sanya {app_name} kuma dawo da asusunku.<br/><br/>Gargadi: Wannan zai haifar da asarar duk saƙonni, haɗe-haɗe, da bayanan asusu sama da sati biyu.",
-  "databaseErrorTimeout": "Mun lura cewa {app_name} yana ɗaukar dogon lokaci don farawa.<br/><br/>Za ku iya ci gaba da jira, fitar da log ɗin na'urarku don rabawa don magance matsaloli, ko sake farawa Session.",
+  "databaseErrorTimeout": "Mun lura cewa {app_name} yana ɗaukar dogon lokaci don farawa.<br/><br/>Za ku iya ci gaba da jira, fitar da log ɗin na'urarku don rabawa don magance matsaloli, ko sake farawa {app_name}.",
   "databaseErrorUpdate": "Bayanan aikace-aikacen ku ba su dace da wannan sigar {app_name}. Sake shigar da aikace-aikacen kuma dawo da asusunka don samar da sabon database kuma ci gaba da amfani da {app_name}.<br/><br/>Gargadi: Wannan zai haifar da rasa duk sakonni da fayiloli fiye da makonni biyu.",
   "databaseOptimizing": "Ƙarƙare Bayanai",
   "debugLog": "Kuskuren Tsari",
