--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -251,7 +251,7 @@
   "create": "Stvori",
   "cut": "Izreži",
   "databaseErrorGeneric": "Došlo je do pogreške u bazi podataka.<br/><br/>Izvezite svoje zapisnike aplikacije kako biste ih podijelili za otklanjanje poteškoća. Ako to ne uspije, ponovo instalirajte {app_name} i vratite svoj račun.<br/><br/>Upozorenje: Ovo će rezultirati gubitkom svih poruka, privitaka i podataka računa starijih od dva tjedna.",
-  "databaseErrorTimeout": "Primijetili smo da pokretanje {app_name} traje dugo.<br/><br/>Možete nastaviti čekati, izvesti zapise uređaja za dijeljenje radi rješavanja problema ili pokušati ponovo pokrenuti Session.",
+  "databaseErrorTimeout": "Primijetili smo da pokretanje {app_name} traje dugo.<br/><br/>Možete nastaviti čekati, izvesti zapise uređaja za dijeljenje radi rješavanja problema ili pokušati ponovo pokrenuti {app_name}.",
   "databaseErrorUpdate": "Vaša aplikacijska baza podataka nije kompatibilna s ovom verzijom {app_name}. Ponovno instalirajte aplikaciju i vratite svoj račun kako biste generirali novu bazu podataka i nastavili koristiti {app_name}.<br/><br/>Upozorenje: Ovo će rezultirati gubitkom svih poruka i privitaka starijih od dva tjedna.",
   "databaseOptimizing": "Optimizacija Baze podataka",
   "debugLog": "Evidencija o otklanjanju grešaka",
