--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -251,7 +251,7 @@
   "create": "ဖန်တီးပါ",
   "cut": "ချည်းကုတ်",
   "databaseErrorGeneric": "ဒေတာဘေ့စ အမှားတစ်ခု ဖြစ်ပွားသည်။<br/><br/>သင့်အက်ပလီကေးရှင်း လော့ဂ်များကို ထုတ်လွှင့်ပြီး ပြဿနာရှင်းရန် မျှဝေပါ။ ဤအောင်မြင်မှုမရှိပါက {app_name} ကို ပြန်ထည့်သွင်းပြီး သင့်အကောင့်ကို ပြန်လည်ထူထောင်ပါ။<br/><br/>သတိပေးချက်- ဤလုပ်ဆောင်ချက်သည် သင့်မက်ဆေ့ချ်များ၊ ပူးတွဲချက်နှင့် သုံးလကြာသော အကောင့်ဒေတာအားလုံး ပျောက်ဆုံးစေနိုင်ပါသည်။",
-  "databaseErrorTimeout": "We've noticed {app_name} is taking a long time to start.<br/><br/>You can continue to wait, export your device logs to share for troubleshooting, or try restarting Session.",
+  "databaseErrorTimeout": "We've noticed {app_name} is taking a long time to start.<br/><br/>You can continue to wait, export your device logs to share for troubleshooting, or try restarting {app_name}.",
   "databaseErrorUpdate": "သင့်အက်ပ်ဒေတာဘေ့စ်သည် {app_name} ၏ ဤဗားရှင်းနှင့် မက်စ်ပေါ်နိုင်ပါ။ အက်ပ်ကို ပြန်ထည့်သွင်းပြီး သင့်အကောင့်ကို ပြန်လည်ထားပြီး {app_name} ကို ဆက်လက်သုံးဆောင်ရန် အချက်ပြပီးနောက် ငါးပတ်အတွင်းလက်ရှိမက်ဆေ့ခ်ျနှင့်လိုက်ဖက်မှုအတင်ပျောက်သွားနိုင်သည်။ <br/><br/> သတိပေးချက်: ဤလုပ်ဆောင်ချက်ကြောင့် အဆိုပါကာလထက်ပိုကြာသော မက်ဆေ့ခ်ျများနှင့် ပျက်စီးပိုင်ဆိုင်မှုများ ပျောက်ဆုံးသွားမည်။",
   "databaseOptimizing": "ဒေတာဘေ့စ် ဖြည့်စွမ်းနေသည်",
   "debugLog": "Debug မှတ်တမ်း",
