--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -148,6 +148,7 @@
   "callsNotificationsRequired": "Spraak- en video-oproepen vereisen dat meldingen zijn ingeschakeld in de systeeminstellingen van uw apparaat.",
   "callsPermissionsRequired": "Oproepmachtigingen vereist",
   "callsPermissionsRequiredDescription": "U kunt de machtiging \"Spraak- en video-oproepen\" inschakelen in de privacy-instellingen.",
+  "callsPermissionsRequiredDescription1": "U kunt de machtiging voor \"Spraak- en video-oproepen\" inschakelen in de privacy-instellingen.",
   "callsReconnecting": "Herverbinden…",
   "callsRinging": "Gaat over...",
   "callsSessionCall": "{app_name} Gesprek",
@@ -376,6 +377,7 @@
   "groupCreateErrorNoMembers": "Kies ten minste één ander groepslid.",
   "groupDelete": "Verwijder groep",
   "groupDeleteDescription": "Weet je zeker dat je <b>{group_name}</b> wilt verwijderen? Dit zal alle leden verwijderen en alle groepsinhoud wissen.",
+  "groupDeletedMemberDescription": "{group_name} is verwijderd door een groepsbeheerder. U kunt geen berichten meer versturen.",
   "groupDescriptionEnter": "Voer een groepsbeschrijving in",
   "groupDisplayPictureUpdated": "Groepsafbeelding bijgewerkt.",
   "groupEdit": "Groep bewerken",
