--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -148,6 +148,7 @@
   "callsNotificationsRequired": "Pro používání hlasových a video hovorů je třeba povolit upozornění/oznámení v systémových nastaveních zařízení.",
   "callsPermissionsRequired": "Požaduje se oprávnění k volání",
   "callsPermissionsRequiredDescription": "Oprávnění pro \"Hlasové a video hovory\" můžete povolit v nastavení Soukromí.",
+  "callsPermissionsRequiredDescription1": "Oprávnění pro \"Hlasové a video hovory\" můžete povolit v nastavení Oprávnění.",
   "callsReconnecting": "Opětovné připojení…",
   "callsRinging": "Vyzvání...",
   "callsSessionCall": "{app_name} hovor",
@@ -379,6 +380,7 @@
   "groupCreateErrorNoMembers": "Prosím vyberte alespoň jednoho dalšího člena skupiny.",
   "groupDelete": "Smazat skupinu",
   "groupDeleteDescription": "Jste si jisti, že chcete smazat <b>{group_name}</b>? Tímto odstraníte všechny členy a smažete veškerý obsah skupiny.",
+  "groupDeletedMemberDescription": "Skupina {group_name} byla smazána správcem skupiny. Nebudete moci posílat další zprávy.",
   "groupDescriptionEnter": "Zadejte popis skupiny",
   "groupDisplayPictureUpdated": "Obrázek skupiny aktualizován.",
   "groupEdit": "Upravit skupinu",
