--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -237,7 +237,7 @@
   "create": "Crear",
   "cut": "Cortar",
   "databaseErrorGeneric": "Produciuse un erro na base de datos.<br/><br/>Exporta os rexistros da túa aplicación para compartilos na resolución de problemas. Se non é exitoso, reinstala {app_name} e restaura a túa conta.<br/><br/>Advertencia: Isto resultará na perda de todas as mensaxes, anexos e datos de conta anteriores a dúas semanas.",
-  "databaseErrorTimeout": "Notamos que {app_name} está a tardar moito en iniciar.<br/><br/>Podes esperar, exportar os teus rexistros do dispositivo para compartir e solucionar problemas, ou tentar reiniciar Session.",
+  "databaseErrorTimeout": "Notamos que {app_name} está a tardar moito en iniciar.<br/><br/>Podes esperar, exportar os teus rexistros do dispositivo para compartir e solucionar problemas, ou tentar reiniciar {app_name}.",
   "databaseErrorUpdate": "A base de datos da túa aplicación non é compatible con esta versión de {app_name}. Reinstala a aplicación e restaura a túa conta para xerar unha nova base de datos e continuar usando {app_name}.<br/><br/>Advertencia: Isto resultará na perda de todas as mensaxes e adxuntos anteriores a dúas semanas.",
   "databaseOptimizing": "Optimizando a Base de Datos",
   "debugLog": "Rexistro de depuración",
