--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -251,7 +251,7 @@
   "create": "შექმნა",
   "cut": "ამოჭრა",
   "databaseErrorGeneric": "მოხდა მონაცემთა ბაზის შეცდომა.<br/><br/>გამოიტანეთ თქვენი აპლიკაციის ჟურნალები, რათა გააზიაროთ პრობლემების აღმოფხვრა. თუ ეს წარუმატებელია, ხელახლა დააინსტალირეთ {app_name} და აღადგინეთ თქვენი ანგარიში.<br/><br/>გაფრთხილება: ეს გამოიწვევს ყველა შეტყობინების, დანართის და ორ კვირაზე ძველი ანგარიშის მონაცემის დაკარგვას.",
-  "databaseErrorTimeout": "გავიგეთ {app_name}-ის გაშვება დიდ დროს იკავებს.<br/><br/>თქვენ შეგიძლიათ დაელოდოთ, ექსპორტირდეთ თქვენი მოწყობილობის ჟურნალები რათა გაუზიაროთ პრობლემების დიაგნოსტირებისთვის, ან სცადოთ Session-ის გადატვირთვა.",
+  "databaseErrorTimeout": "გავიგეთ {app_name}-ის გაშვება დიდ დროს იკავებს.<br/><br/>თქვენ შეგიძლიათ დაელოდოთ, ექსპორტირდეთ თქვენი მოწყობილობის ჟურნალები რათა გაუზიაროთ პრობლემების დიაგნოსტირებისთვის, ან სცადოთ {app_name}-ის გადატვირთვა.",
   "databaseErrorUpdate": "თქვენი აპლიკაციის მონაცემთა ბაზა არ შეესაბამება {app_name}-ის ამ ვერსიას. ხელახლა დააინსტალირეთ აპლიკაცია და აღადგინეთ თქვენი ანგარიში ახალი მონაცემთა ბაზის შესაქმნელად და {app_name} გამოყენების გაგრძელებისთვის.<br/><br/>გაფრთხილება: ეს გამოიწვევს ყველა მესიჯის და ფაილის დაკარგვას, რომლებიც ორ კვირაზე მეტი ხნისაა.",
   "databaseOptimizing": "მონაცემთა ბაზის ოპტიმიზაცია",
   "debugLog": "გამართვის ჟურნალი",
