--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -147,6 +147,7 @@
   "callsNotificationsRequired": "Для голосових та відеодзвінків необхідно увімкнути сповіщення в налаштуваннях системи вашого пристрою.",
   "callsPermissionsRequired": "Потрібні дозволи для дзвінків",
   "callsPermissionsRequiredDescription": "Ви можете увімкнути дозвіл «Голосові та відеодзвінки» в налаштуваннях конфіденційності.",
+  "callsPermissionsRequiredDescription1": "Ви можете увімкнути «Голосові та відеодзвінки» в налаштуваннях конфіденційності.",
   "callsReconnecting": "Повторне з'єднання…",
   "callsRinging": "Виклик...",
   "callsSessionCall": "{app_name} Дзвінок",
@@ -154,9 +155,9 @@
   "callsVoiceAndVideo": "Голосові та відеодзвінки",
   "callsVoiceAndVideoBeta": "Голосові та відеодзвінки (бета-версія)",
   "callsVoiceAndVideoModalDescription": "Ваша IP-адреса видима вашому партнеру по дзвінку та серверу Oxen Foundation при використанні бета-дзвінків.",
-  "callsVoiceAndVideoToggleDescription": "Дозволяє здійснювати голосові та відео виклики з іншими користувачами.",
+  "callsVoiceAndVideoToggleDescription": "Дозволяє голосові та відеодзвінки з іншими користувачами.",
   "callsYouCalled": "Ви дзвонили {name}",
-  "callsYouMissedCallPermissions": "Ви пропустили дзвінок від <b>{name}</b>, бо не увімкнули <b>Голосові та Відеодзвінки</b> у Налаштуваннях Приватності.",
+  "callsYouMissedCallPermissions": "Ви пропустили дзвінок від <b>{name}</b>, бо не увімкнули <b>Голосові та відеодзвінки</b> у налаштуваннях конфіденційності.",
   "cameraErrorNotFound": "Камеру не знайдено",
   "cameraErrorUnavailable": "Камера недоступна.",
   "cameraGrantAccess": "Дозволити доступ до камери",
@@ -236,8 +237,8 @@
   "conversationsEnterNewLine": "SHIFT + ENTER надсилає повідомлення, ENTER починає новий рядок",
   "conversationsEnterSends": "ENTER надсилає повідомлення, SHIFT + ENTER починає новий рядок",
   "conversationsGroups": "Групи",
-  "conversationsMessageTrimming": "Обрізка повідомлень",
-  "conversationsMessageTrimmingTrimCommunities": "Обрізати спільноти",
+  "conversationsMessageTrimming": "Автовидалення повідомлень",
+  "conversationsMessageTrimmingTrimCommunities": "Автовидалення повідомлень спільнот",
   "conversationsMessageTrimmingTrimCommunitiesDescription": "Видаляти повідомлення у спільнотах старше 6 місяців і де більше 2 000 повідомлень.",
   "conversationsNew": "Нова бесіда",
   "conversationsNone": "У вас ще немає жодних розмов",
@@ -274,9 +275,11 @@
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Не вдалося оновити групу",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "У вас немає прав на видалення інших повідомлень",
   "deleteMessage": "{count, plural, one [Видалити повідомлення] few [Видалити повідомлення] many [Видалити повідомлення] other [Видалити повідомлення]}",
+  "deleteMessageConfirm": "{count, plural, one [Ви дійсно хочете видалити це повідомлення?] few [Ви дійсно хочете видалити ці повідомлення?] many [Ви дійсно хочете видалити ці повідомлення?] other [Ви дійсно хочете видалити ці повідомлення?]}",
   "deleteMessageDeleted": "{count, plural, one [Повідомлення видалено] few [Повідомлення видалені] many [Повідомлення видалені] other [Повідомлення видалені]}",
   "deleteMessageDeletedGlobally": "Це повідомлення було видалено",
   "deleteMessageDeletedLocally": "Це повідомлення було видалено на цьому пристрої",
+  "deleteMessageDescriptionDevice": "{count, plural, one [Ви дійсно хочете видалити це повідомлення лише з цього пристрою?] few [Ви дійсно хочете видалити ці повідомлення лише з цього пристрою?] many [Ви дійсно хочете видалити ці повідомлення лише з цього пристрою?] other [Ви дійсно хочете видалити ці повідомлення лише з цього пристрою?]}",
   "deleteMessageDescriptionEveryone": "Ви впевнені, що бажаєте видалити це повідомлення для всіх?",
   "deleteMessageDeviceOnly": "Видалити тільки на цьому пристрої",
   "deleteMessageDevicesAll": "Видалити на всіх моїх пристроях",
@@ -373,6 +376,7 @@
   "groupCreateErrorNoMembers": "Будь ласка, виберіть принаймні 1 учасника групи.",
   "groupDelete": "Видалити групу",
   "groupDeleteDescription": "Ви впевнені, що хочете видалити <b>{group_name}?</b> Це видалить усіх учасників і всю інформацію групи.",
+  "groupDeletedMemberDescription": "{group_name} видалено адміністратором групи. Ви більше не зможете надсилати повідомлення.",
   "groupDescriptionEnter": "Введіть опис групи",
   "groupDisplayPictureUpdated": "Зображення групи для показу оновлено.",
   "groupEdit": "Редагувати групу",
@@ -385,6 +389,7 @@
   "groupInviteFailedMultiple": "Не вдалося запросити {name} та ще {count} інших до {group_name}",
   "groupInviteFailedTwo": "Не вдалося запросити {name} та {other_name} до {group_name}",
   "groupInviteFailedUser": "Не вдалося запросити {name} до {group_name}",
+  "groupInviteSending": "{count, plural, one [Надсилання запрошення] few [Надсилання запрошень] many [Надсилання запрошень] other [Надсилання запрошень]}",
   "groupInviteSent": "Запрошення надіслано",
   "groupInviteSuccessful": "Запрошення до групи успішне",
   "groupInviteVersion": "Користувачі мають мати останню версію, щоб отримувати запрошення",
@@ -470,7 +475,7 @@
   "linkPreviewsErrorLoad": "Не вдалося завантажити попередній перегляд посилання",
   "linkPreviewsErrorUnsecure": "Попередній перегляд не застосовується для незахищеного посилання",
   "linkPreviewsFirstDescription": "Відображати попередній перегляд посилань, які ви надсилаєте та отримуєте. Це може бути корисно, однак {app_name} має зв'язуватися з вебсайтами для генерації попереднього перегляду. Ви завжди можете вимкнути попередній перегляд посилань у налаштуваннях {app_name}.",
-  "linkPreviewsSend": "Надсилати попередній перегляд посилань",
+  "linkPreviewsSend": "Попередній перегляд надісланих посилань",
   "linkPreviewsSendModalDescription": "У вас не буде повного захисту метаданих при надсиланні попереднього перегляду посилань.",
   "linkPreviewsTurnedOff": "Попередній перегляд посилань вимкнено",
   "linkPreviewsTurnedOffDescription": "{app_name} повинен зв'язуватися з підключеними веб-сайтами, щоб створити попередній перегляд посилань, що ви надсилаєте і отримуєте.<br/><br/>Ви можете увімкнути їх у налаштуваннях {app_name}.",
@@ -581,7 +586,7 @@
   "notificationsSound": "Звук",
   "notificationsSoundDescription": "Звукові сповіщення у відкритому застосунку",
   "notificationsSoundDesktop": "Аудіосповіщення",
-  "notificationsStrategy": "Стратегія сповіщення",
+  "notificationsStrategy": "Принцип оповіщення",
   "notificationsStyle": "Стиль сповіщень",
   "notificationsSystem": "{message_count} нових повідомлень у {conversation_count} розмовах",
   "notificationsVibrate": "Вібрація",
@@ -759,7 +764,7 @@
   "theError": "Помилка",
   "tryAgain": "Спробуйте ще",
   "typingIndicators": "Індикатор введення тексту",
-  "typingIndicatorsDescription": "Бачити та надсилати індикатори набору тексту.",
+  "typingIndicatorsDescription": "Бачити та надсилати індикатори введення тексту.",
   "undo": "Назад",
   "unknown": "Невідомо",
   "updateApp": "Оновлення застосунку",
